--- a/AnalizisModell(H4).html
+++ b/AnalizisModell(H4).html
@@ -412,95 +412,58 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Típus</p>
+    </th>
+    <th width="314">
+        <p>Leírás</p>
+    </th>
+</tr>
 
+</thead>
     <tbody>
-    <tr valign="top">
-
-        <td width="67">
-
-            <h4>Név</h4>
-
-        </td>
-
-        <td width="120">
-
-            <p><b>Típus</b></p>
-
-        </td>
-
-        <td width="384">
-
-            <p><b>Leírás</b></p>
-
-        </td>
-
-    </tr>
 
     <tr valign="top">
-
-        <td width="67">
-
-            <p>felhasznaloID</p>
-
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">felhasznaloID</p>
         </td>
-
-        <td width="120">
-
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>String</p>
-
         </td>
-
-        <td width="384">
-
-            <p>A felhasználó egyedi azonosítója (Neptun kód).</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A felhasználó egyedi azonosítója (Neptun kód).</p>
         </td>
-
     </tr>
-
     <tr valign="top">
-
-        <td width="67">
-
-            <p>jelszoHash</p>
-
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">jelszoHash</p>
         </td>
-
-        <td width="120">
-
-            <p>String</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>	String</p>
         </td>
-
-        <td width="384">
-
-            <p>A jelszó biztonságos hash értéke.</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>A jelszó biztonságos hash értéke</p>
         </td>
-
     </tr>
-
     <tr valign="top">
-
-        <td width="67">
-
-            <p>szerepkor</p>
-
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">szerepkor</p>
         </td>
-
-        <td width="120">
-
-            <p>Enum</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>	Enum</p>
         </td>
-
-        <td width="384">
-
-            <p>A felhasználó jogosultsági szintje (Hallgató/Oktató/Admin).</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A felhasználó jogosultsági szintje (Hallgató/Oktató/Admin).</p>
         </td>
-
     </tr>
 
     </tbody>
@@ -517,95 +480,58 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Argumentumok</p>
+    </th>
+    <th width="314">
+        <p>	Működése, feladata</p>
+    </th>
+</tr>
 
+</thead>
     <tbody>
-    <tr valign="top">
-
-        <td width="67">
-
-            <h4>Név</h4>
-
-        </td>
-
-        <td width="124">
-
-            <p><b>Argumentumok</b></p>
-
-        </td>
-
-        <td width="381">
-
-            <p><b>Működése, feladata</b></p>
-
-        </td>
-
-    </tr>
 
     <tr valign="top">
-
-        <td width="67">
-
-            <p>ellenorizJelszo</p>
-
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">ellenorizJelszo</p>
         </td>
-
-        <td width="124">
-
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>jelszo</p>
-
         </td>
-
-        <td width="381">
-
-            <p>Ellenőrzi a megadott jelszót a hash érték alapján.</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	Ellenőrzi a megadott jelszót a hash érték alapján.</p>
         </td>
-
     </tr>
-
     <tr valign="top">
-
-        <td width="67">
-
-            <p>keresKurzus</p>
-
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">keresKurzus</p>
         </td>
-
-        <td width="124">
-
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>keresoSzo</p>
-
         </td>
-
-        <td width="381">
-
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>Kurzusok keresése név, kód vagy oktató alapján.</p>
-
         </td>
-
     </tr>
-
     <tr valign="top">
-
-        <td width="67">
-
-            <p>kiirkozlemeny</p>
-
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">kiirkozlemeny</p>
         </td>
-
-        <td width="124">
-
-            <p>cim, tartalom</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>	cim, tartalom</p>
         </td>
-
-        <td width="381">
-
-            <p>Oktató jogosultság esetén üzenet küldése a Hallgatóknak.</p>
-
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	Oktató jogosultság esetén üzenet küldése a Hallgatóknak.</p>
         </td>
-
     </tr>
 
     </tbody>
@@ -628,52 +554,60 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Típus</p>
+    </th>
+    <th width="314">
+        <p>	Leírás</p>
+    </th>
+</tr>
+
+</thead>
     <tbody>
+
     <tr valign="top">
-        <td width="67">
-            <h4>Név</h4>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">kurzusKod</p>
         </td>
-        <td width="120">
-            <p><b>Típus</b></p>
-        </td>
-        <td width="384">
-            <p><b>Leírás</b></p>
-        </td>
-    </tr>
-    <tr valign="top">
-        <td width="67">
-            <p>kurzusKod</p>
-        </td>
-        <td width="120">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>String</p>
         </td>
-        <td width="384">
-            <p>A tantárgy egyedi kódja.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A tantárgy egyedi kódja.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>kreditErtek</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">kreditErtek</p>
         </td>
-        <td width="120">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>Egész szám</p>
         </td>
-        <td width="384">
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>A kurzus teljesítéséért járó kredit.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>kapacitas</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">kapacitas</p>
         </td>
-        <td width="120">
-            <p>Egész szám</p>
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>	Egész szám</p>
         </td>
-        <td width="384">
-            <p>A kurzusra felvehető hallgatók maximális száma.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A kurzusra felvehető hallgatók maximális száma.</p>
         </td>
     </tr>
+
     </tbody>
 </table>
 
@@ -686,52 +620,60 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Argumentumok</p>
+    </th>
+    <th width="314">
+        <p>	Működése, feladata</p>
+    </th>
+</tr>
+
+</thead>
     <tbody>
+
     <tr valign="top">
-        <td width="67">
-            <h4>Név</h4>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">ellenorizElfeltetel</p>
         </td>
-        <td width="124">
-            <p><b>Argumentumok</b></p>
-        </td>
-        <td width="381">
-            <p><b>Működése, feladata</b></p>
-        </td>
-    </tr>
-    <tr valign="top">
-        <td width="67">
-            <p>ellenorizElfeltetel</p>
-        </td>
-        <td width="124">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>hallgatoID</p>
         </td>
-        <td width="381">
-            <p>Ellenőrzi, hogy a hallgató teljesítette-e a felvételhez szükséges előfeltételeket.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	Ellenőrzi, hogy a hallgató teljesítette-e a felvételhez szükséges előfeltételeket.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>hozzaadVizsga</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">hozzaadVizsga</p>
         </td>
-        <td width="124">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>vizsgaObjektum</p>
         </td>
-        <td width="381">
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>Új vizsgaidőpont felvétele a kurzushoz.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>frissitKapicatas</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">frissitKapicatas</p>
         </td>
-        <td width="124">
-            <p>ujErtek</p>
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>	ujErtek</p>
         </td>
-        <td width="381">
-            <p>A kurzus kapacitásának módosítása adminisztrátor által.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A kurzus kapacitásának módosítása adminisztrátor által.</p>
         </td>
     </tr>
+
     </tbody>
 </table>
 
@@ -752,52 +694,60 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Típus</p>
+    </th>
+    <th width="314">
+        <p>Leírás</p>
+    </th>
+</tr>
+
+</thead>
     <tbody>
+
     <tr valign="top">
-        <td width="67">
-            <h4>Név</h4>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">vizsgaID</p>
         </td>
-        <td width="120">
-            <p><b>Típus</b></p>
-        </td>
-        <td width="384">
-            <p><b>Leírás</b></p>
-        </td>
-    </tr>
-    <tr valign="top">
-        <td width="67">
-            <p>vizsgaID</p>
-        </td>
-        <td width="120">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>Long</p>
         </td>
-        <td width="384">
-            <p>A vizsga egyedi azonosítója.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A vizsga egyedi azonosítója.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>idopont</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">idopont</p>
         </td>
-        <td width="120">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>DateTime</p>
         </td>
-        <td width="384">
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>A vizsga dátuma és ideje.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>maxHelyek</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">maxHelyek</p>
         </td>
-        <td width="120">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>Egész szám</p>
         </td>
-        <td width="384">
-            <p>A vizsgára maximálisan jelentkezhető hallgatók száma.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A vizsgára maximálisan jelentkezhető hallgatók száma.</p>
         </td>
     </tr>
+
     </tbody>
 </table>
 
@@ -810,52 +760,60 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Argumentumok</p>
+    </th>
+    <th width="314">
+        <p>	Működése, feladata</p>
+    </th>
+</tr>
+
+</thead>
     <tbody>
+
     <tr valign="top">
-        <td width="67">
-            <h4>Név</h4>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">jelentkezik</p>
         </td>
-        <td width="124">
-            <p><b>Argumentumok</b></p>
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>hallgatoID</p>
         </td>
-        <td width="381">
-            <p><b>Működése, feladata</b></p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	Hallgatói jelentkezés rögzítése, helyek ellenőrzése.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>jelentkezik</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">torolJelentkezes</p>
         </td>
-        <td width="124">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>hallgatoID</p>
         </td>
-        <td width="381">
-            <p>Hallgatói jelentkezés rögzítése, helyek ellenőrzése.</p>
-        </td>
-    </tr>
-    <tr valign="top">
-        <td width="67">
-            <p>torolJelentkezes</p>
-        </td>
-        <td width="124">
-            <p>hallgatoID</p>
-        </td>
-        <td width="381">
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>Hallgató törlése a vizsgáról, helyek frissítése.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>ellenorizHatarido</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">ellenorizHatarido</p>
         </td>
-        <td width="124">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>nincs</p>
         </td>
-        <td width="381">
-            <p>Ellenőrzi, hogy a jelentkezési határidő még érvényes-e.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	Ellenőrzi, hogy a jelentkezési határidő még érvényes-e.</p>
         </td>
     </tr>
+
     </tbody>
 </table>
 
@@ -876,52 +834,60 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Típus</p>
+    </th>
+    <th width="314">
+        <p>	Leírás</p>
+    </th>
+</tr>
+
+</thead>
     <tbody>
+
     <tr valign="top">
-        <td width="67">
-            <h4>Név</h4>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">jegyID</p>
         </td>
-        <td width="120">
-            <p><b>Típus</b></p>
-        </td>
-        <td width="384">
-            <p><b>Leírás</b></p>
-        </td>
-    </tr>
-    <tr valign="top">
-        <td width="67">
-            <p>jegyID</p>
-        </td>
-        <td width="120">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>Long</p>
         </td>
-        <td width="384">
-            <p>A bejegyzés egyedi azonosítója.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A bejegyzés egyedi azonosítója.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>erdemjegy</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">erdemjegy</p>
         </td>
-        <td width="120">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>Egész szám/Enum</p>
         </td>
-        <td width="384">
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>A Hallgató által elért érdemjegy (1-5 skálán).</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>datum</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">datum</p>
         </td>
-        <td width="120">
-            <p>DateTime</p>
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>	DateTime</p>
         </td>
-        <td width="384">
-            <p>A jegy beírásának vagy a vizsga napjának dátuma.</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A jegy beírásának vagy a vizsga napjának dátuma.</p>
         </td>
     </tr>
+
     </tbody>
 </table>
 
@@ -934,52 +900,60 @@
     </li>
 </ul>
 
-<table border="1" cellpadding="0" cellspacing="0">
+<table border="1" cellpadding="4" cellspacing="3" width="90%">
+    <colgroup><col width="86">
+        <col width="57">
+        <col width="314">
+    </colgroup><thead>
+<tr valign="top">
+    <th width="86">
+        <p>Név</p>
+    </th>
+    <th width="57">
+        <p>Argumentumok</p>
+    </th>
+    <th width="314">
+        <p>	Működése, feladata</p>
+    </th>
+</tr>
+
+</thead>
     <tbody>
+
     <tr valign="top">
-        <td width="67">
-            <h4>Név</h4>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">jegyValidacio</p>
         </td>
-        <td width="124">
-            <p><b>Argumentumok</b></p>
-        </td>
-        <td width="381">
-            <p><b>Működése, feladata</b></p>
-        </td>
-    </tr>
-    <tr valign="top">
-        <td width="67">
-            <p>jegyValidacio</p>
-        </td>
-        <td width="124">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>erdemjegy</p>
         </td>
-        <td width="381">
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>Ellenőrzi, hogy a beírt jegy érvényes-e a megengedett skálán.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>atlagSzamitas</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">atlagSzamitas</p>
         </td>
-        <td width="124">
+        <td sdval="0" sdnum="1038;0;@" width="57">
             <p>hallgatoID</p>
         </td>
-        <td width="381">
+        <td sdval="0" sdnum="1038;0;@" width="314">
             <p>Kiszámítja a Hallgató aktuális félévi átlagát.</p>
         </td>
     </tr>
     <tr valign="top">
-        <td width="67">
-            <p>rögzit</p>
+        <td sdval="38405" sdnum="1038;0;@" width="86">
+            <p align="left">rögzit</p>
         </td>
-        <td width="124">
-            <p>hallgatoID, kurzusID, jegy</p>
+        <td sdval="0" sdnum="1038;0;@" width="57">
+            <p>	hallgatoID, kurzusID, jegy</p>
         </td>
-        <td width="381">
-            <p>A jegy véglegesítése az adatbázisban (Oktatói jogosultság szükséges).</p>
+        <td sdval="0" sdnum="1038;0;@" width="314">
+            <p>	A jegy véglegesítése az adatbázisban (Oktatói jogosultság szükséges).</p>
         </td>
     </tr>
+
     </tbody>
 </table>
 
