--- a/SRS(H3).html
+++ b/SRS(H3).html
@@ -245,7 +245,8 @@
 <p style="margin-bottom: 0cm;"><a href="#szabvany">12. Alkalmazott szabványok</a></p>
 <p style="margin-left: 0.5cm; margin-bottom: 0cm;"><a href="#kotelezo">12.1. Kötelezően alkalmazandó szabványok</a></p>
 <p style="margin-left: 0.5cm; margin-bottom: 0cm;"><a href="#valasztas">12.2. Választás alapján alkalmazott szabványok</a></p>
-<p style="margin-bottom: 0cm;"><a href="#melleklet">13. Mellékletek</a></p>
+<p style="margin-bottom: 0cm;"><a href="#szotar">13. Szótár</a></p>
+<p style="margin-bottom: 0cm;"><a href="#melleklet">14. Mellékletek</a></p>
 
 <p><br>
 	<br>
@@ -1068,7 +1069,7 @@
 </ul>
 
 
-	<h1><a name="10"></a>13. Szótár</h1>
+<h1><a name="szotar"></a>13. Szótár</h1>
 <p><strong>SRS (Software Requirements Specification):</strong> Szoftverkövetelmény-specifikáció; a rendszer követelményeit leíró dokumentum.</p>
 <p><strong>Use Case:</strong> Használati eset; egy funkció részletes leírása szereplők és lépések szerint.</p>
 <p><strong>Main Flow:</strong> Fő folyamat; a használati eset alapvető, sikeres lefutása.</p>
