--- a/AnalizisModell(H4).html
+++ b/AnalizisModell(H4).html
@@ -963,6 +963,54 @@
 
 <p>&nbsp;</p>
 
+    <h1><a name="4"></a>10. Szótár</h1>
+
+<p><strong>analízis modell:</strong> A rendszer elemzésére szolgáló szerkezeti és működési leírás, amely osztályokat, kapcsolatokat és folyamatokat rögzít.</p>
+
+
+
+
+<p><strong>Java Spring Boot:</strong> Java-alapú keretrendszer webes backend alkalmazások készítéséhez.</p>
+
+<p><strong>entitás:</strong> A rendszerben önállóan létező adatobjektum (pl. Kurzus, Vizsga).</p>
+
+
+<p><strong>alrendszer:</strong> A nagy rendszer egy funkcionális egysége, amely bizonyos feladatkörért felel.</p>
+
+<p><strong>RESTful API:</strong> HTTP alapú kommunikációs felület, amely standard módon szolgáltat adatokat (pl. JSON).</p>
+
+<p><strong>mikroszolgáltatás:</strong> A rendszer kisméretű, önálló komponense, amely egyetlen funkció ellátásáért felel.</p>
+
+<p><strong>statikus modell:</strong> A rendszer szerkezeti felépítését bemutató modell (osztályok, attribútumok, kapcsolatok).</p>
+
+<p><strong>attribútum:</strong> Egy osztályhoz tartozó adatmező (pl. kurzuskód, kredit).</p>
+
+<p><strong>bázisosztály:</strong> Olyan osztály, amelyből más osztályok örökölnek, közös tulajdonságokat biztosítva.</p>
+
+<p><strong>dinamikus modell:</strong> A rendszer működésének időbeli változásait és folyamatát leíró modell.</p>
+
+<p><strong>Use Case (használati eset):</strong> A felhasználók és a rendszer közötti interakció leírása.</p>
+
+<p><strong>szekvencia diagram:</strong> A rendszer objektumai közötti üzenetváltás sorrendjét ábrázoló UML diagram.</p>
+
+<p><strong>állapotdiagram:</strong> Egy objektum életciklusát és az állapotai közötti átmeneteket mutató diagram.</p>
+
+<p><strong>funkcionális modell:</strong> A rendszer adatáramlását és működési lépéseit bemutató modell.</p>
+
+<p><strong>validáció:</strong> Adatok vagy műveletek érvényességének ellenőrzése.</p>
+
+<p><strong>Repository:</strong> Adatkezelésért felelős réteg, amely az adatbázissal kommunikál.</p>
+
+<p><strong>Controller:</strong> A beérkező kéréseket kezelő és a megfelelő szolgáltatást meghívó réteg a backendben.</p>
+
+<p><strong>metaadat:</strong> Más adatokat leíró információ (pl. létrehozás dátuma).</p>
+
+<p><strong>Enum:</strong> Felsoroló típus, amely előre definiált értékek közül enged választani.</p>
+
+<p><strong>hash:</strong> Egyirányú matematikai függvény eredménye, amely jelszavak biztonságos tárolására szolgál.</p>
+
+
+
 <h1><a name="melleklet"></a>X. Mellékletek</h1>
 
 <p>1. ábra - Analízis modell osztálydiagramja</p>
