--- a/AnalizisModell(H4).html
+++ b/AnalizisModell(H4).html
@@ -232,6 +232,7 @@
 <p style="margin-left: 1.0cm; "><a href="#masodik">3.6.2. Kurzus osztály</a></p>
 <p style="margin-left: 1.0cm; "><a href="#harmadik">3.6.3. Vizsga osztály</a></p>
 <p style="margin-left: 1.0cm; "><a href="#negyedik">3.6.4. Jegy osztály</a></p>
+<p><a href="#szotar">4. Szótár</a></p>
 <p><a href="#melleklet">X. Mellékletek</a></p>
 
 <p>&nbsp;</p>
@@ -963,7 +964,7 @@
 
 <p>&nbsp;</p>
 
-    <h1><a name="4"></a>10. Szótár</h1>
+    <h1><a name="szotar"></a>4. Szótár</h1>
 
 <p><strong>analízis modell:</strong> A rendszer elemzésére szolgáló szerkezeti és működési leírás, amely osztályokat, kapcsolatokat és folyamatokat rögzít.</p>
 
