--- a/RendszerTervezes(H5).html
+++ b/RendszerTervezes(H5).html
@@ -447,6 +447,63 @@
 
 <p>&nbsp;</p>
 
+
+    <h1><a name="10"></a>6. Szótár</h1>
+
+<p><strong>Rendszertervezés:</strong> A szoftver fizikai és technikai felépítésének megtervezése az analízis alapján.</p>
+
+
+<p><strong>Next.js:</strong> Modern JavaScript/TypeScript alapú webes keretrendszer frontend alkalmazások készítésére.</p>
+
+<p><strong>TypeScript:</strong> A JavaScript típusos kiterjesztése, amely biztonságosabb és átláthatóbb fejlesztést biztosít.</p>
+
+<p><strong>Tailwind CSS:</strong> Segédosztályokból (utility class) építkező CSS keretrendszer, amely gyorsítja a modern webes UI-ok fejlesztését.</p>
+
+<p><strong>HeroUI:</strong> Előre elkészített, modern webes UI komponensek gyűjteménye.</p>
+
+
+
+<p><strong>perzisztencia:</strong> Az adatok tartós tárolása adatbázisban vagy más tárolórendszerben.</p>
+
+
+<p><strong>Spring Boot:</strong> Java-alapú keretrendszer, amely leegyszerűsíti backend alkalmazások fejlesztését.</p>
+
+<p><strong>Spring Data JPA:</strong> A Spring keretrendszer része, amely automatikusan kezeli az adatbázis-leképezést és lekérdezéseket.</p>
+
+<p><strong>szemantikai adatmodell:</strong> Az adatok tényleges jelentésén alapuló logikai modell (pl. E-R diagram).</p>
+
+<p><strong>kardinalitás / számosság:</strong> A kapcsolatban résztvevő elemek darabszáma (pl. 1:N vagy N:M kapcsolat).</p>
+
+<p><strong>adatintegritás:</strong> Az adatok pontosságának és következetességének biztosítása.</p>
+    
+<p><strong>rollback:</strong> Hibakezelési folyamat, amely visszaállítja az adatbázist a tranzakció előtti állapotra.</p>
+
+<p><strong>aszinkron folyamat:</strong> Olyan művelet, amely a háttérben fut anélkül, hogy a fő programot megvárakoztatná.</p>
+
+<p><strong>SMTP:</strong> E-mail küldésére szolgáló kommunikációs protokoll.</p>
+
+<p><strong>Unit teszt:</strong> Olyan teszt, amely egyetlen függvény vagy komponens helyes működését vizsgálja.</p>
+
+<p><strong>JUnit:</strong> Java alapú tesztelési keretrendszer.</p>
+
+<p><strong>Mockito:</strong> Mock objektumok létrehozására képes Java tesztkönyvtár.</p>
+
+<p><strong>Határérték-analízis:</strong> Tesztelési módszer, amely extrém vagy határértékhez közeli bemeneteket vizsgál.</p>
+
+<p><strong>Ekvivalencia-particionálás:</strong> Tesztelési módszer, amely a bemeneteket csoportokra bontja, és ezekből választ reprezentatív teszteseteket.</p>
+
+<p><strong>Integrációs teszt:</strong> Több komponens vagy réteg együttes működésének tesztelése.</p>
+
+<p><strong>API endpoint:</strong> Konkrét cím, amelyen keresztül a kliens kommunikál a szerverrel (pl. /api/v1/jegy).</p>
+
+<p><strong>Postman:</strong> API-k tesztelésére használt külső eszköz.</p>
+
+<p><strong>szerepkör alapú hozzáférés:</strong> Olyan megoldás, ahol a felhasználók csak a szerepkörükhöz tartozó funkciókat érhetik el.</p>
+
+<p><strong>perzisztens adat:</strong> Olyan adat, amely tartósan, hosszú távon tárolódik.</p>
+
+<p><strong>tranzakciós integritás:</strong> A tranzakciók hibamentes és teljes körű végrehajtásának garantálása.</p>
+
 <p>1. ábra E-R diagram</p>
 <img src="diagramsz/er.png" style="width:100%" alt="E-R diagram">
 
