--- a/RendszerTervezes(H5).html
+++ b/RendszerTervezes(H5).html
@@ -270,6 +270,7 @@
 <p style="margin-left: 0.5cm;"><a href="#Unit">5.1. Unit Tesztek (Backend)</a></p>
 <p style="margin-left: 0.5cm;"><a href="#Integ">5.2. Integrációs Tesztek</a></p>
 <p style="margin-left: 0.5cm;"><a href="#Felulet">5.3. Felhasználói Felület Tesztelése (Frontend)</a></p>
+<p><a href="#szotar">6. Szótár</a></p>
 
 <p>&nbsp;</p>
 
@@ -448,7 +449,7 @@
 <p>&nbsp;</p>
 
 
-    <h1><a name="10"></a>6. Szótár</h1>
+    <h1><a name="szotar"></a>6. Szótár</h1>
 
 <p><strong>Rendszertervezés:</strong> A szoftver fizikai és technikai felépítésének megtervezése az analízis alapján.</p>
 
